--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<div class="booking">
 		<h2>我們幾乎每天都爆滿<br>
 		    先訂位吧！	</h2>
-		<img src="images/map.png">
+		<img src="images/Map.png">
 		<form class="form">
 			<div class="label">
 				<label for="name">姓名</label>
