--- a/Cart.html
+++ b/Cart.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/all.js"></script>
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 	<title>購物車</title>
 </head>
@@ -27,18 +27,63 @@
 			   六角大漢堡</p>
 		</div>
 		<div class="content">
-			<button class="fas fa-search"></button>
+			<div class="searchbar">
+				<h3><span class='fas fa-phone-square'></span>線上訂購美食</h3>
+				  <input type="search" class="search"><button class="fas fa-search"></button>
+					<p><a href="#">結帳去</a> | <a href="#"><span class="fas fa-shopping-cart"></span><span class="orderNum">1</span></a></p>
+			</div>
+			<div class="clearfix"></div>
+			<div>
+				<ul class="sidemenu">
+					<li><a href="#">全部 (23)</a></li>
+					<li><a href="#">只愛吃薯條	(18)</a></li>
+					<li><a href="#">加熱就吃 (1)</a></li>
+					<li class="pickmenu"><a href="#">不敗漢堡 (4)</a></li>
+				</ul>
+				<ul class="burger">
+					<li><img src="images/product_1.png">
+							<h4>經典漢堡套餐<br>
+								Classic Hamburger <br>
+							  ______________</h4>
+							  <p>$150 <br>
+								   <span class="fas fa-shopping-cart pinkcart"><a href="#">放入購物車</a></span></p>
+					</li>
+					<li>
+						<img src="images/product_2.png">
+						<h4>英俊香腸<br>
+							Handsome Sausage<br>
+							______________</h4>
+							<p>$180 <br>
+								 <span class="fas fa-shopping-cart pinkcart"><a href="#">放入購物車</a></span></p>
+					</li>
+					<li><img src="images/product_3.png">
+						<h4>漢堡兄弟<br>
+							Burger Brother<br>
+							______________</h4>
+							<p>$330 <br>
+								 <span class="fas fa-shopping-cart pinkcart"><a href="#">放入購物車</a></span></p>
+					</li>
+					<li><img src="images/product_4.png">
+						<h4>完美願望<br>
+							Perfect Dream<br>
+							______________</h4>
+							<p>$1,080 <br>
+								 <span class="fas fa-shopping-cart pinkcart"><a href="#">放入購物車</a></span></p>
+					</li>
+				</ul>
+			</div>
+		<div class="clearfix"></div>
 		</div>
-        <div class="footer">
+
+    <div class="footer">
 			<ul>
 				<li>關於西餐廳<br><br>
-				Curabitur lobortis id lorem id bibndum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. </li>
+					Curabitur lobortis id lorem id bibndum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. </li>
 				<li>聯絡方式<br><br>
-				• 桃園市走遍遍<br>
+					• 桃園市走遍遍<br>
 			    • +886 998 988<br>
 			    • service@hexschool.com</li>
 			</ul>
-
 			<h3 align=right>西餐廳</h3><br>
 			<a href="#" width="50%" height="50%"><img src="images/logo_03.png"></a>	<div class="clearfix"></div>
 		</div>
